; ModuleID = '/home/carl/AnghaBench/linux/drivers/sbus/char/extr_openprom.c_get_node.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/sbus/char/extr_openprom.c_get_node.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }
%struct.TYPE_3__ = type { %struct.device_node* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.device_node* (i32, %struct.TYPE_3__*)* @get_node to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.device_node* @get_node(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.device_node*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.device_node* @of_find_node_by_phandle(i32 %6)
  store %struct.device_node* %7, %struct.device_node** %5, align 8
  %8 = load %struct.device_node*, %struct.device_node** %5, align 8
  %9 = icmp ne %struct.device_node* %8, null
  br i1 %9, label %10, label %14

10:                                               ; preds = %2
  %11 = load %struct.device_node*, %struct.device_node** %5, align 8
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 0
  store %struct.device_node* %11, %struct.device_node** %13, align 8
  br label %14

14:                                               ; preds = %10, %2
  %15 = load %struct.device_node*, %struct.device_node** %5, align 8
  ret %struct.device_node* %15
}

declare dso_local %struct.device_node* @of_find_node_by_phandle(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
